<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="mediaDetailViewModel"
                type="jeremypacabis.mlist.viewmodels.MediaDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            tools:context=".views.activities.MediaDetailActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/view_last_visited_on"
                android:text="@{mediaDetailViewModel.mediaItemData.lastViewedTimestamp}"
                android:visibility="@{mediaDetailViewModel.showLastVisitText}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/last_visit_text"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/last_visit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                    imageUrl="@{mediaDetailViewModel.mediaItemData.artworkUrl100}"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    android:id="@+id/media_poster_image"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{mediaDetailViewModel.mediaItemData.trackName}"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/media_track_name"
                    tools:text="@string/track_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{mediaDetailViewModel.mediaItemData.primaryGenreName}"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/media_track_genre"
                    tools:text="@string/genre"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{mediaDetailViewModel.mediaItemData.mediaPrice}"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/media_track_price"
                    tools:text="@string/price"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{mediaDetailViewModel.mediaItemData.longDescription}"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/media_long_description"
                    tools:text="@string/long_description"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>