<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="position"
                type="int"/>
        <variable
                name="mediaViewModel"
                type="jeremypacabis.mlist.viewmodels.MediaListViewModel"/>
    </data>

    <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{() -> mediaViewModel.onItemClicked(position)}"
            android:layout_marginRight="@dimen/componentMargin"
            android:layout_marginStart="@dimen/componentMargin"
            android:layout_marginLeft="@dimen/componentMargin"
            android:layout_marginEnd="@dimen/componentMargin"
            android:layout_marginTop="@dimen/componentMargin"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:clickable="true"
            android:focusable="true"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:cardElevation="@dimen/cardElevation">
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                    imageUrl="@{mediaViewModel.getMediaAtIndex(position).artworkUrl100}"
                    tools:src="@android:drawable/ic_menu_gallery"
                    android:layout_margin="@dimen/componentMargin"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/media_track_artwork"
                    android:scaleType="centerCrop"
                    android:layout_width="96dp"
                    android:layout_height="96dp"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginRight="@dimen/componentMargin"
                    android:layout_marginEnd="@dimen/componentMargin"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{mediaViewModel.getMediaAtIndex(position).trackName}"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/media_track_name"
                        tools:text="@string/track_name"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{mediaViewModel.getMediaAtIndex(position).primaryGenreName}"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/media_track_genre"
                        tools:text="@string/genre"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{mediaViewModel.getMediaAtIndex(position).mediaPrice}"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/media_track_price"
                        tools:text="@string/price"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</layout>